# FLower-yalah

./: test_medmnist.py
flower-proj-tensor/: README.md  pyproject.toml
flower-proj-tensor/flower_proj_tensor/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
flower-proj-tensor/wandb/: latest-run
flower-proj-tensor/wandb/run-20250619_135945-djdhx1fx/: run-djdhx1fx.wandb
flower-proj-tensor/wandb/run-20250619_140456-5yly1ug5/: run-5yly1ug5.wandb
flower-proj-tensor/wandb/run-20250619_141442-77mx3iw9/: run-77mx3iw9.wandb
flower-proj-tensor/wandb/run-20250619_141708-2j0ri25t/: run-2j0ri25t.wandb
flower-proj-tensor/wandb/run-20250619_141933-cq1yc9x2/: run-cq1yc9x2.wandb
flower-proj-tensor/wandb/run-20250619_142533-ctw3p7vu/: run-ctw3p7vu.wandb
flower-proj-tensor/wandb/run-20250619_152824-hwx78dig/: run-hwx78dig.wandb
flower-proj-tensor/wandb/run-20250619_153141-m4zri0vf/: run-m4zri0vf.wandb
flower-proj-tensor/wandb/run-20250619_161403-qtsfqwvy/: run-qtsfqwvy.wandb
flower-proj-tensor/wandb/run-20250619_165844-16666ryy/: run-16666ryy.wandb
flower-proj-tensor/wandb/run-20250620_133123-cj661iv1/: run-cj661iv1.wandb
flower-proj-tensor/wandb/run-20250620_154332-p75igiqa/: run-p75igiqa.wandb
flower-proj-tensor/wandb/run-20250620_154541-m71lwa8b/: run-m71lwa8b.wandb
flower-proj-tensor/wandb/run-20250623_111428-7spo3394/: run-7spo3394.wandb
flower-proj-tensor/wandb/run-20250623_112154-yomw3kg8/: run-yomw3kg8.wandb
flower-proj-tensor/wandb/run-20250623_112707-bd6syo1d/: run-bd6syo1d.wandb
(+88 files in other folders)
