[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-proj-tensor"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Blaaz"

[tool.flwr.app.components]
serverapp = "flower_proj_tensor.server_app:app"
clientapp = "flower_proj_tensor.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1
batch-size = 16
verbose = false
fraction-fit = 1.0
fraction-evaluate = 0.5
use-wandb = true
alpha = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
